--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "recharts": "^3.2.1",
+    "twilio": "^5.10.3",
     "zod": "^4.1.11"
   },
   "devDependencies": {
