--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "date-fns": "^4.1.0",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.544.0",
-    "next": "^15.6.0-canary.58",
+    "next": "15.1.0",
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -32,7 +32,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.6.0-canary.58",
+    "eslint-config-next": "15.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5"
