--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "date-fns": "^4.1.0",
+    "geist": "^1.5.1",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.544.0",
     "next": "15.1.0",
