--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "geist": "^1.5.1",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.544.0",
-    "next": "15.1.1",
+    "next": "15.1.11",
     "nodemailer": "^7.0.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.63.0",
     "recharts": "^3.2.1",
     "twilio": "^5.10.3",
@@ -29,11 +29,11 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.1.1",
+    "eslint-config-next": "15.1.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5"
